--- a/index.css
+++ b/index.css
@@ -648,6 +648,7 @@ footer .logo .medsos i {
   border-radius: 25px;
   padding: 10px;
   color: black;
+  text-decoration: none;
 }
 
 footer .fitur {
@@ -686,6 +687,33 @@ footer .fitur div p:hover {
   color: white;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+@media (max-width: 360px) {
+  .uncover h1 {
+    font-size: 20px;
+  }
+  .destinasi .destinasi-card div img {
+    width: 150px;
+  }
+  .referral .teks {
+    width: 326px;
+  }
+  .inspirasi .card-inspirasi div {
+    width: 320px;
+  }
+  .inspirasi .card-inspirasi div .overlay h2 {
+    font-size: 20px;
+  }
+  .inspirasi .card-inspirasi div .price h2 {
+    font-size: 12px;
+  }
+  .inspirasi .card-inspirasi div img {
+    width: 320px;
+  }
+  .panduan .card-panduan div img {
+    width: 320px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -846,6 +874,7 @@ footer .fitur div p:hover {
   }
   .panduan .card-panduan div p {
     font-size: 13px;
+    margin-right: 40px;
   }
   .footer {
     display: flex;
